
JasperReports Change Log
===================================

JasperReports 4.0.3 (2011-0x-xx, SVN xxxx)
---------------------------------------------
- deprecated report font code removed from the library's API;

- minor bug fixes and improvements;





JasperReports 4.0.2 (2011-04-18, SVN 4298)
---------------------------------------------
- improved XHTML exporter to bring it at feature parity with the former HTML exporter;

- initial support for paragraph styling including: indentation, spacing and tab stops;

- new values available for line spacing type: AtLeast, Fixed and Proportional;

- added support for tab characters inside text elements based on newly introduced tab stop concept;

- new /demo/samples/paragraphs sample added to demonstrate paragraph styling features;

- minor bug fixes and improvements;





JasperReports 4.0.1 (2011-02-28, SVN 4219)
---------------------------------------------

- new Xalan-based and Jaxen-based XPath query executer namespace aware 
implementations added;

- new functions EQUAL, NOTEQUAL, LESS, GREATER and BETWEEN are now available 
for the $X{} syntax in dynamic SQL queries;

- new XSL query executer implementation added;

- support for multiple hyperlinks embedded into styled/markup text;

- improved image quality in the XLS exporters;

- experimental JSON data source and query executer added as separate sample 
under /demo/samples/jsondatasource;

- experimental HTML renderer component added as separate sample 
under /demo/samples/htmlcomponent;

- custom property "net.sf.jasperreports.export.html.class" added at element level to allow 
specifying the CSS "class" attribute for elements when exported to HTML and XHTML/CSS format;

- minor bug fixes and improvements;





JasperReports 4.0.0 (2010-12-31, SVN 4121)
---------------------------------------------

- new CSV query executer added to simplify to allow configuring CSV data sources from within report templates
using built-in paramters and config properties;
