@@ -75,31 +75,6 @@ public interface JRGraphicElement extends JRElement, JRCommonGraphicElement
 	 * @deprecated Replaced by {@link FillEnum#SOLID}.
 	 */
 	public static final byte FILL_SOLID = 1;
-
-
-	/**
-	 * Indicates the pen type used for this element.
-	 * @return one of the pen constants in this class
-	 * @deprecated Replaced by {@link #getLinePen()}
-	 */
-	public byte getPen();
-
-	/**
-	 * @deprecated Replaced by {@link #getLinePen()}
-	 */
-	public Byte getOwnPen();
-
-	/**
-	 * Sets the pen type that will used for this element.
-	 * @param pen one of the pen constants in this class
-	 * @deprecated Replaced by {@link #getLinePen()}
-	 */
-	public void setPen(byte pen);
-
-	/**
-	 * @deprecated Replaced by {@link #getLinePen()}
-	 */
-	public void setPen(Byte pen);
 	
 
 }
