@@ -4,7 +4,8 @@ JasperReports Change Log
 
 JasperReports 4.0.3 (2011-0x-xx, SVN xxxx)
 ---------------------------------------------
-- deprecated report font code removed from the library's API;
+- deprecated code for JRReportFont, JRBox and graphic element pen property
+was removed from the library's API;
 
 - minor bug fixes and improvements;
 
